MapStruct dependency added, configured and UserServiceImpl implemented with MapStruct