@@ -2,6 +2,7 @@ package com.kushalshrestha.springboot.service.impl;
 
 import com.kushalshrestha.springboot.dto.UserDto;
 import com.kushalshrestha.springboot.entity.User;
+import com.kushalshrestha.springboot.mapper.AutoUserMapper;
 import com.kushalshrestha.springboot.mapper.UserMapper;
 import com.kushalshrestha.springboot.repository.UserRepository;
 import com.kushalshrestha.springboot.service.UserService;
@@ -11,6 +12,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor  // will create constructor for UserRepository instance variable
@@ -22,15 +24,19 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public UserDto createUser(UserDto userDto) {
-//        convert userDto into User Jpa Entity
+        /* convert userDto into User Jpa Entity */
 //        User user = UserMapper.mapToUser(userDto);
 
-//        Using ModelMapper
-        User user = modelMapper.map(userDto, User.class);
+//        /* Using ModelMapper */
+//        User user = modelMapper.map(userDto, User.class);
+
+        User user = AutoUserMapper.MAPPER_INSTANCE.mapToUser(userDto);
 
         User savedUser = userRepository.save(user);
+        /* Using model mapper */
+//        UserDto savedUserDto = modelMapper.map(savedUser, UserDto.class);
 
-        UserDto savedUserDto = modelMapper.map(savedUser, UserDto.class);
+        UserDto savedUserDto = AutoUserMapper.MAPPER_INSTANCE.mapToUserDto(savedUser);
         return savedUserDto;
 
     }
@@ -40,14 +46,16 @@ public class UserServiceImpl implements UserService {
         Optional<User> optionalUser = userRepository.findById(userId);
         User user = optionalUser.get();
 //        return UserMapper.mapToUserDto(user);
-        return modelMapper.map(user, UserDto.class);
+//        return modelMapper.map(user, UserDto.class);
+        return AutoUserMapper.MAPPER_INSTANCE.mapToUserDto(optionalUser.get());
     }
 
     @Override
     public List<UserDto> getAllUsers() {
         List<User> usersList = userRepository.findAll();
 //        return usersList.stream().map(UserMapper::mapToUserDto).toList();
-        return usersList.stream().map((user) -> modelMapper.map(user, UserDto.class)).toList();
+//        return usersList.stream().map((user) -> modelMapper.map(user, UserDto.class)).collect(Collectors.toList());
+        return usersList.stream().map((user) -> AutoUserMapper.MAPPER_INSTANCE.mapToUserDto(user)).collect(Collectors.toList());
     }
 
     @Override
@@ -58,7 +66,8 @@ public class UserServiceImpl implements UserService {
         existingUser.setEmail(user.getEmail());
         User updatedUser = userRepository.save(existingUser);
 //        return UserMapper.mapToUserDto(updatedUser);
-        return modelMapper.map(updatedUser, UserDto.class);
+//        return modelMapper.map(updatedUser, UserDto.class);
+        return AutoUserMapper.MAPPER_INSTANCE.mapToUserDto(updatedUser);
     }
 
     @Override
